# ada_beautify

./: .gitignore  CMakeLists.txt  README.md  document.cpp  document.hpp  formatter.cpp  formatter.hpp  main.cpp  scanner.hpp  scope.hpp  symbol.cpp  symbol.hpp  unit.hpp  utils.hpp  version.hpp.in
tests/: case.txt
